--- a/assed/template/task_form.html
+++ b/assed/template/task_form.html
@@ -1,111 +1,113 @@
-<div class="frame-40">
-  <h2 class="text-t1">Add Task</h2>
-  <div class="closeDivTask d-none" id="addTaskPopCanclBtn" onclick="addTaskPopUpCls(id)">
-    <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img" />
+<div class="addTaskContainer">
+
+  <div class="frame-40">
+    <h2 class="text-t1">Add Task</h2>
+    <div class="closeDivTask d-none" id="addTaskPopCanclBtn" onclick="addTaskPopUpCls(id)">
+      <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img" />
+    </div>
   </div>
+
+  <form class="taskForm" id="taskForm" onsubmit="validateAndAddTask(); return false;">
+    <div class="frame-219">
+      <div class="input-box">
+        <label for="topicListOptions" class="form-label label-in-txt">Topic</label>
+        <select class="form-select selectpicker" list="topicListOptions" id="taskTopic">
+          <option value="select Topic" selected>select Topic</option>
+          <option value="User Storys">User Storys</option>
+          <option value="Technical Support">Technical Support</option>
+          <option value="Coding">Coding</option>
+        </select>
+      </div>
+      <div class="input-box">
+        <label for="taskTitle" class="form-label label-in-txt">Title*</label>
+        <input required id="taskTitle" class="form-control" />
+      </div>
+      <div class="input-box">
+        <label for="taskDescription" class="form-label label-in-txt">Description</label>
+        <textarea type="text" class="form-control" style="width: 100%;" rows="3" id="taskDescription"
+          placeholder="Enter a Description"></textarea>
+      </div>
+      <div class="input-box">
+        <label for="exampleDataList" class="form-label label-in-txt">Assigned to</label>
+        <div class="input-group mb-3">
+          <input class="form-control selectpicker" list="datalistOptions" id="taskContact"
+            placeholder="Type to search...">
+          <datalist id="datalistOptions">
+            <option value="Georg"></option>
+            <option value="Alex"></option>
+            <option value="Jean"></option>
+          </datalist>
+          <div class="input-group-append">
+            <button class="btn btn-primary" onclick="addAssigned(event)">Add</button>
+          </div>
+        </div>
+      </div>
+      <div id="assinedPersons" style="all: unset; display: flex;"></div>
+    </div>
+    <!-- right side -->
+    <div class="frame-39">
+      <div class="input-box">
+        <label for="tastDueDate" class="form-label label-in-txt">due Date</label>
+        <input required type="date" class="form-control" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
+      </div>
+
+      <div class="input-box">
+        <label for="prio-btngroup" class="form-label label-in-txt">Prio</label>
+        <div class="priority-button-group" id="prio-btngroup">
+          <button type="button" class="priority-button priority-button-text txt-nodeco " tabindex="0" id="urgentBtn"
+            onclick="selectPriority(id)">
+            <a style="text-decoration: none; color: black;">Urgent</a>
+            <img src="assed/svg/Prio alta.svg" alt="">
+          </button>
+          <button type="button" class="priority-button priority-button-medium priority-button-text txt-nodeco"
+            tabindex="1" id="mediumBtn" onclick="selectPriority(id)">
+            <a style="text-decoration: none; color: black;">Medium</a>
+            <img src="assed/svg/Prio media.svg" alt="">
+          </button>
+          <button type="button" class="priority-button priority-button-low priority-button-text txt-nodeco" tabindex="2"
+            id="lowBtn" onclick="selectPriority(id)">
+            <a style="text-decoration: none; color: black;">Low</a>
+            <img src="assed/svg/Prio baja.svg" alt="">
+          </button>
+        </div>
+      </div>
+
+      <!-- Add a hidden input to store the selected priority -->
+      <input type="hidden" name="priority" id="priority-input">
+
+      <div class="input-box">
+        <label for="taskCategory" class="form-label label-in-txt">Category</label>
+        <select required class="input-box form-select task-overlay-v-1-t6" name="" id="taskCategory">
+          <option value="select Category">select Category</option>
+          <option value="To Do">To Do</option>
+          <option value="In progress">In progress</option>
+          <option value="Await feedback">Await feedback</option>
+        </select>
+      </div>
+
+
+      <div class="input-box" >
+        <label for="task-input" class="form-label label-in-txt">Subtasks</label>
+        <div class="input-group mb-3">
+
+          <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
+          <div class="input-group-append">
+            <button class="btn btn-primary" form="subTask" onclick="addSubTask(event)">Add</button>
+          </div>
+        </div>
+      </div>
+
+
+      <div id="task-list" style="width: 100%">
+        <!-- Existing tasks will go here -->
+      </div>
+      <div class="frame-29">
+        <button class="button-secondary-wo-icon text-sm-btn" onclick="clearinputs()">Clear</button>
+        <button class="button-wo-icon text-sm-btn" name="submitTask" onclick="validateAndAddTask()"
+          id="task-Submitbutton" type="button">Add Task</button>
+
+      </div>
+    </div>
+  </form>
+
 </div>
-
-
-
-<form class="taskForm" id="taskForm" onsubmit="validateAndAddTask(); return false;">
-  <div class="frame-219">
-    <div class="" style="width: 100%;">
-      <label for="topicListOptions" class="form-label label-in-txt">Topic</label>
-      <select class="form-select selectpicker" list="topicListOptions" id="taskTopic">
-        <option value="select Topic" selected>select Topic</option>
-        <option value="User Storys">User Storys</option>
-        <option value="Technical Support">Technical Support</option>
-        <option value="Coding">Coding</option>
-      </select>
-    </div>
-    <div class="input-box">
-      <label for="taskTitle" class="form-label label-in-txt">Title*</label>
-      <input required id="taskTitle" class="form-control" />
-    </div>
-    <div class="input-box">
-      <label for="taskDescription" class="form-label label-in-txt">Description</label>
-      <textarea type="text" class="form-control" style="width: 100%;" rows="3" id="taskDescription"
-        placeholder="Enter a Description"></textarea>
-    </div>
-    <div class="mt-4" style="width: 100%;">
-      <label for="exampleDataList" class="form-label label-in-txt">Assigned to</label>
-      <div class="input-group mb-3">
-        <input class="form-control selectpicker" list="datalistOptions" id="taskContact"
-          placeholder="Type to search...">
-        <datalist id="datalistOptions">
-          <option value="Georg"></option>
-          <option value="Alex"></option>
-          <option value="Jean"></option>
-        </datalist>
-        <div class="input-group-append">
-          <button class="btn btn-primary" onclick="addAssigned(event)">Add</button>
-        </div>
-      </div>
-    </div>
-    <div id="assinedPersons" style="all: unset; display: flex;"></div>
-  </div>
-  <!-- right side -->
-  <div class="frame-39">
-    <div class="input-box">
-      <label for="tastDueDate" class="form-label label-in-txt">due Date</label>
-      <input required type="date" class="form-control" name="" id="tastDueDate" placeholder="dd/mm/yyyy" />
-    </div>
-
-    <div class="input-box">
-      <label for="prio-btngroup" class="form-label label-in-txt">Prio</label>
-      <div class="priority-button-group" id="prio-btngroup">
-        <button type="button" class="priority-button priority-button-text txt-nodeco " tabindex="0" id="urgentBtn"
-          onclick="selectPriority(id)">
-          <a style="text-decoration: none; color: black;">Urgent</a>
-          <img src="assed/svg/Prio alta.svg" alt="">
-        </button>
-        <button type="button" class="priority-button priority-button-medium priority-button-text txt-nodeco"
-          tabindex="1" id="mediumBtn" onclick="selectPriority(id)">
-          <a style="text-decoration: none; color: black;">Medium</a>
-          <img src="assed/svg/Prio media.svg" alt="">
-        </button>
-        <button type="button" class="priority-button priority-button-low priority-button-text txt-nodeco" tabindex="2"
-          id="lowBtn" onclick="selectPriority(id)">
-          <a style="text-decoration: none; color: black;">Low</a>
-          <img src="assed/svg/Prio baja.svg" alt="">
-        </button>
-      </div>
-    </div>
-
-    <!-- Add a hidden input to store the selected priority -->
-    <input type="hidden" name="priority" id="priority-input">
-
-    <div class="input-box">
-      <label for="taskCategory" class="form-label label-in-txt">Category</label>
-      <select required class="input-box form-select task-overlay-v-1-t6" name="" id="taskCategory">
-        <option value="select Category">select Category</option>
-        <option value="To Do">To Do</option>
-        <option value="In progress">In progress</option>
-        <option value="Await feedback">Await feedback</option>
-      </select>
-    </div>
-
-
-    <div class="mt-4" style="width: 100%;">
-      <label for="task-input" class="form-label label-in-txt">Subtasks</label>
-      <div class="input-group mb-3">
-
-        <input type="text" id="task-input" class="form-control" placeholder="Add a subtask">
-        <div class="input-group-append">
-          <button class="btn btn-primary" form="subTask" onclick="addSubTask(event)">Add</button>
-        </div>
-      </div>
-    </div>
-
-
-    <div id="task-list" style="width: 100%">
-      <!-- Existing tasks will go here -->
-    </div>
-    <div class="frame-29">
-      <button class="button-secondary-wo-icon text-sm-btn" onclick="clearinputs()">Clear</button>
-      <button class="button-wo-icon text-sm-btn" name="submitTask" onclick="validateAndAddTask()" id="task-Submitbutton"
-        type="button">Add Task</button>
-
-    </div>
-  </div>
-</form>
