--- a/assed/template/draggablecards.html
+++ b/assed/template/draggablecards.html
@@ -1,61 +1,55 @@
 <div class="board-area">
-    <div class="mt-4">
-        <div class="frame-191">
-            <div class="frame-192">
-                <h1 class="frame-40">Board</h1>
-                <div class="frame-123">
-                    <div class="search-task-web">
-                        <input type="search" class="search-input" name="Find Task" id="findtaskinput"
-                            placeholder="Search Task">
-                        <span class="search-icon">
-                            <img src="assed/svg/search.svg" alt="">
-                        </span>
+    <div class="frame-191">
+        <h1 class="frame-40">Board</h1>
+        <div class="frame-123">
+            <div class="search-task-web">
+                <input type="search" class="search-input" name="Find Task" id="findtaskinput" placeholder="Search Task">
+                <span class="search-icon">
+                    <img src="assed/svg/search.svg" alt="">
+                </span>
 
-                    </div>
-                    <button class="add-new-task-btn" onclick="addTaskPopUp(id), loadAssigned()">
-                        <p class="add-new-task-text-div">Add Task</p>
-                        <img src="assed/svg/add.svg" alt="">
-                    </button>
-                </div>
+            </div>
+            <button class="add-new-task-btn" onclick="addTaskPopUp(id), loadAssigned()">
+                <p class="add-new-task-text-div">Add Task</p>
+                <img src="assed/svg/add.svg" alt="">
+            </button>
+        </div>
+    </div>
+
+    <div class="kanban-board">
+        <div class="kanban-column" id="todo-column" ondrop="drop('To Do')" ondragover="allowDrop(event)">
+            <div class="frame-136 column-title-text ">
+                <p>To Do</p>
+                <div class="plus-button"><img src="assed/svg/capa-1.svg" alt=""
+                        onclick="addTaskPopUp(id), loadAssigned(), alert(0)"></div>
+            </div>
+            <div class="kanban-card-display" id="todo-tasks">
             </div>
         </div>
+        <div class="kanban-column" id="inprogress-column" ondrop="drop('In progress')" ondragover="allowDrop(event)">
+            <div class="frame-136 column-title-text ">
+                <p>In Progress</p>
+                <div class="plus-button"><img src="assed/svg/capa-1.svg" alt=""
+                        onclick="addTaskPopUp(id), loadAssigned()"></div>
+            </div>
+            <div class="kanban-card-display" id="inprogress-tasks">
+            </div>
+        </div>
+        <div class="kanban-column" id="feedback-column" ondrop="drop('Await feedback')" ondragover="allowDrop(event)">
+            <div class="frame-136 column-title-text ">
+                <p>Awaiting Feedback</p>
+                <div class="plus-button"><img src="assed/svg/capa-1.svg" alt=""
+                        onclick="addTaskPopUp(id), loadAssigned()"></div>
+            </div>
+            <div class="kanban-card-display" id="Feedback-tasks"></div>
+        </div>
+        <div class="kanban-column" id="done-column" ondrop="drop('Done')" ondragover="allowDrop(event)">
+            <div class="frame-136 column-title-text ">
+                <p>Done</p>
 
-        <div class="kanban-board">
-            <div class="kanban-column" id="todo-column" ondrop="drop('To Do')" ondragover="allowDrop(event)">
-                <div class="frame-136 column-title-text ">
-                    <p>To Do</p>
-                    <div class="plus-button"><img src="assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned(), alert(0)"></div>
-                </div>
-                <div class="kanban-card-display" id="todo-tasks">
-                </div>
             </div>
-            <div class="kanban-column" id="inprogress-column" ondrop="drop('In progress')"
-                ondragover="allowDrop(event)">
-                <div class="frame-136 column-title-text ">
-                    <p>In Progress</p>
-                    <div class="plus-button"><img src="assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned()"></div>
-                </div>
-                <div class="kanban-card-display" id="inprogress-tasks">
-                </div>
-            </div>
-            <div class="kanban-column" id="feedback-column" ondrop="drop('Await feedback')"
-                ondragover="allowDrop(event)">
-                <div class="frame-136 column-title-text ">
-                    <p>Awaiting Feedback</p>
-                    <div class="plus-button"><img src="assed/svg/capa-1.svg" alt="" onclick="addTaskPopUp(id), loadAssigned()"></div>
-                </div>
-                <div class="kanban-card-display" id="Feedback-tasks"></div>
-            </div>
-            <div class="kanban-column" id="done-column" ondrop="drop('Done')" ondragover="allowDrop(event)">
-                <div class="frame-136 column-title-text ">
-                    <p>Done</p>
-
-                </div>
-                <div class="kanban-card-display" id="done-tasks">
-                </div>
+            <div class="kanban-card-display" id="done-tasks">
             </div>
         </div>
     </div>
 </div>
-
-
