--- a/css/board.css
+++ b/css/board.css
@@ -20,7 +20,7 @@
     align-content: center;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 50%;
 }
 
 .frame-192 {
@@ -41,10 +41,6 @@
 }
 
 .frame-40 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1px;
     color: #000;
     font-family: Inter;
     font-size: 61px;
@@ -247,8 +243,8 @@
 }
 
 .assigned-circle {
-    width: 32px;
-    height: 32px;
+    width: 48px;
+    height: 48px;
     border: 1px solid white;
     border-radius: 50%;
     display: inline-block;
@@ -271,7 +267,7 @@
 
     /* Version 2/t7 */
     font-family: Inter;
-    font-size: 12px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
@@ -301,4 +297,26 @@
     padding: 6px 16px;
     align-items: center;
     gap: 16px;
+}
+
+@media (max-width: 1660px) {
+    .board-area {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 8px;
+        padding-left: 232px;
+        padding-right: 8px;
+    }
+}
+
+@media (max-width: 700px) {
+    .board-area {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 8px;
+        padding-left: 8px;
+        padding-right: 8px;
+    }
 }
