--- a/css/draggablecards.css
+++ b/css/draggablecards.css
@@ -10,17 +10,14 @@
 
 .kanban-column {
     flex: 1;
-    /* background-color: #f5f5f5; */
     padding: 10px;
-    /* border: 1px solid #ddd;
-    border-radius: 5px; */
     margin: 10px;
     min-height: 50dvh;
     gap: 16px;
-    min-width: 280px;
+    
 }
 
-.kanban-card-display{
+.kanban-card-display {
     display: flex;
     padding-bottom: 50px;
     flex-direction: column;
@@ -43,7 +40,7 @@
     /* Hinzufügen eines Zeigers für das Ziehen */
 }
 
-.kanban-card:active{
+.kanban-card:active {
     transform: rotate(5deg);
 }
 
@@ -182,5 +179,46 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%;
-
 }
+
+@media (max-width: 1660px) {
+
+    .kanban-board {
+        display: flex;
+        min-height: 64px;
+        padding: 0px 64px;
+        align-items: flex-start;
+        gap: 6px;
+        flex-shrink: 0;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-content: flex-start;
+        overflow: auto;
+        overflow-x: scroll;
+    }
+
+    .kanban-card-display {
+        width: 100%;
+        display: flex;
+        padding-bottom: 6px;
+        flex-direction: row;
+        scroll-behavior: smooth;
+        overflow: visible;
+        scroll-margin-top: 80px;
+        scroll-margin-bottom: 100px;
+    }
+
+    .kanban-column {
+        flex: 1;
+        padding: 10px;
+        margin: 10px;
+        min-height: 0;
+        gap: 16px;
+        width: 100%;
+        overflow-x: auto;
+        /* Enable horizontal scrolling for the kanban column */
+    }
+}
+
+
+@media screen {}
