--- a/css/sidebar_mobile.css
+++ b/css/sidebar_mobile.css
@@ -4,12 +4,12 @@
     display: none;
     height: 80px;
     width: 100%;
-    position: fixed;
-    bottom: 0;
+    /* position: fixed;
+    bottom: 0; */
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.10);
     background-color: #2A3D59;
     gap: 15px; 
-    z-index: 9999;
+    
 }
 
 .prop-1-default-responsive {
