--- a/assed/template/summary_content.html
+++ b/assed/template/summary_content.html
@@ -1,21 +1,24 @@
 <div class="summary_content">
     <!--Div for Join Logo-->
     <div>
-        <img src="assed/svg/join_summary_logo.svg" style="width: 625px; height: 73px;padding-left: 243px;" alt="" srcset="">
+        <img src="assed/svg/join_summary_logo.svg" style="width: 625px; height: 73px;padding-left: 243px;" alt=""
+            srcset="">
     </div>
     <!--Div for content Tables-->
     <div class="summary_cards">
         <div class="flex-row-center">
-            <div onclick="loadNextSite('board')" onmouseover="changeImage(1)" onmouseout="restoreImage(1)" class="summary_card frame-65">
+            <div onclick="loadNextSite('board')" onmouseover="changeImage(1)" onmouseout="restoreImage(1)"
+                class="summary_card frame-65">
                 <img id="image1" class="logos-summary" src="assed/svg/edit.svg" alt="">
-                <div>
+                <div class="summaryCardsText">
                     <p class="p-headline" id="totalToDo"></p>
                     <p class="p-summary">To-do</p>
                 </div>
             </div>
-            <div onclick="loadNextSite('board')" onmouseover="changeImage(2)" onmouseout="restoreImage(2)" class="summary_card frame-65">
+            <div onclick="loadNextSite('board')" onmouseover="changeImage(2)" onmouseout="restoreImage(2)"
+                class="summary_card frame-65">
                 <img id="image2" class="logos-summary" src="assed/svg/checkbutton_icon.svg" alt="">
-                <div>
+                <div class="summaryCardsText">
                     <p class="p-headline" id="totalDone"></p>
                     <p class="p-summary">Done</p>
                 </div>
@@ -24,12 +27,12 @@
         <div onclick="loadNextSite('board')" class="flex-row-center">
             <div class="summary_card summary_card_big frame-summary">
                 <img class="logos-summary" src="assed/svg/urgent_arrow.svg" alt="">
-                <div>
+                <div class="summaryCardsText">
                     <p class="p-headline" id="totalUrgent">1</p>
                     <p class="p-summary">To-do</p>
                 </div>
                 <img src="assed/svg/vertical_line.svg" alt="">
-                <div>
+                <div class="summaryCardsText">
                     <p class="p-urgentdate" id="urgentDate"></p>
                     <p class="p-urgentdate-text">Upcoming Deadline</p>
                 </div>
@@ -49,15 +52,12 @@
                 </div>
             </div>
             <div onclick="loadNextSite('board')" class="summary_card">
-                <div class="frame-64">
+                <div class="frame-64 ">
                     <p class="p-headline" id="taskFeedback"></p>
                     <p class="p-summary">Awaiting Feedback</p>
                 </div>
             </div>
         </div>
     </div>
-    <!--Div for nice greetings :-)-->
-    <div>
 
-    </div>
 </div>
