--- a/assed/template/header.html
+++ b/assed/template/header.html
@@ -17,7 +17,7 @@
             <div>
                 <div class="sub-link"><a href="impressum.html">Legal Notice</a></div>
                 <div class="sub-link"><a href="datenschutzerkl.html">Privacy Policy</a></div>
-                <div class="sub-link"><a href="../join/index.html">Log Out</a></div>
+                <div class="sub-link"><a href="../index.html">Log Out</a></div>
             </div>
         </div>
         <div class="group-5" onclick="loadSubMenu(1)">
